--- a/lynora/frontend/package.json
+++ b/lynora/frontend/package.json
@@ -13,11 +13,12 @@
     "@massalabs/massa-web3": "^5.3.0",
     "@massalabs/wallet-provider": "^3.1.3",
     "@supabase/supabase-js": "^2.39.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "ogl": "^1.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "clsx": "^2.0.0",
-    "date-fns": "^2.30.0"
+    "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -35,6 +36,3 @@
     "vite": "^5.0.8"
   }
 }
-
-
-
